@@ -203,7 +203,7 @@
         
           <div class="app-changelog">
               <div class="cat-headline">Changelog</div>
-              1. Fixed: Issue affecting the visibility of the transaction details screen.<br />2. Fixed: Incorrect initial time limit setting in an advertisement.
+              1. Fix: Some trades have no option to cancel the trade.<br />2. Fix: Display error messages at the start of the trade.<br />3. Fix: Ad edit screen displays a formula instead of market price.
           </div>
         
 
@@ -296,7 +296,7 @@
         
           <div class="app-changelog">
               <div class="cat-headline">Changelog</div>
-              1. Fixed: Issue affecting the visibility of the transaction details screen.<br />2. Fixed: Incorrect initial time limit setting in an advertisement.
+              1. Fix: Some trades have no option to cancel the trade.<br />2. Fix: Display error messages at the start of the trade.<br />3. Fix: Ad edit screen displays a formula instead of market price.
           </div>
         
 
@@ -389,7 +389,7 @@
         
           <div class="app-changelog">
               <div class="cat-headline">Changelog</div>
-              1. Fixed: Issue affecting the visibility of the transaction details screen.<br />2. Fixed: Incorrect initial time limit setting in an advertisement.
+              1. Fix: Some trades have no option to cancel the trade.<br />2. Fix: Display error messages at the start of the trade.<br />3. Fix: Ad edit screen displays a formula instead of market price.
           </div>
         
 
@@ -482,7 +482,7 @@
         
           <div class="app-changelog">
               <div class="cat-headline">Changelog</div>
-              1. Fixed: Issue affecting the visibility of the transaction details screen.<br />2. Fixed: Incorrect initial time limit setting in an advertisement.
+              1. Fix: Some trades have no option to cancel the trade.<br />2. Fix: Display error messages at the start of the trade.<br />3. Fix: Ad edit screen displays a formula instead of market price.
           </div>
         
 
@@ -575,7 +575,7 @@
         
           <div class="app-changelog">
               <div class="cat-headline">Changelog</div>
-              1. Fixed: Issue affecting the visibility of the transaction details screen.<br />2. Fixed: Incorrect initial time limit setting in an advertisement.
+              1. Fix: Some trades have no option to cancel the trade.<br />2. Fix: Display error messages at the start of the trade.<br />3. Fix: Ad edit screen displays a formula instead of market price.
           </div>
         
 
@@ -668,7 +668,7 @@
         
           <div class="app-changelog">
               <div class="cat-headline">Changelog</div>
-              1. Fixed: Issue affecting the visibility of the transaction details screen.<br />2. Fixed: Incorrect initial time limit setting in an advertisement.
+              1. Fix: Some trades have no option to cancel the trade.<br />2. Fix: Display error messages at the start of the trade.<br />3. Fix: Ad edit screen displays a formula instead of market price.
           </div>
         
 
@@ -761,7 +761,7 @@
         
           <div class="app-changelog">
               <div class="cat-headline">Changelog</div>
-              1. Fixed: Issue affecting the visibility of the transaction details screen.<br />2. Fixed: Incorrect initial time limit setting in an advertisement.
+              1. Fix: Some trades have no option to cancel the trade.<br />2. Fix: Display error messages at the start of the trade.<br />3. Fix: Ad edit screen displays a formula instead of market price.
           </div>
         
 
@@ -854,7 +854,7 @@
         
           <div class="app-changelog">
               <div class="cat-headline">Changelog</div>
-              1. Fixed: Issue affecting the visibility of the transaction details screen.<br />2. Fixed: Incorrect initial time limit setting in an advertisement.
+              1. Fix: Some trades have no option to cancel the trade.<br />2. Fix: Display error messages at the start of the trade.<br />3. Fix: Ad edit screen displays a formula instead of market price.
           </div>
         
 
@@ -937,7 +937,7 @@
         
           <div class="app-changelog">
               <div class="cat-headline">Changelog</div>
-              1. Fixed: Issue affecting the visibility of the transaction details screen.<br />2. Fixed: Incorrect initial time limit setting in an advertisement.
+              1. Fix: Some trades have no option to cancel the trade.<br />2. Fix: Display error messages at the start of the trade.<br />3. Fix: Ad edit screen displays a formula instead of market price.
           </div>
         
 
@@ -1030,7 +1030,7 @@
         
           <div class="app-changelog">
               <div class="cat-headline">Changelog</div>
-              1. Fixed: Issue affecting the visibility of the transaction details screen.<br />2. Fixed: Incorrect initial time limit setting in an advertisement.
+              1. Fix: Some trades have no option to cancel the trade.<br />2. Fix: Display error messages at the start of the trade.<br />3. Fix: Ad edit screen displays a formula instead of market price.
           </div>
         
 
@@ -1123,7 +1123,7 @@
         
           <div class="app-changelog">
               <div class="cat-headline">Changelog</div>
-              1. Fixed: Issue affecting the visibility of the transaction details screen.<br />2. Fixed: Incorrect initial time limit setting in an advertisement.
+              1. Fix: Some trades have no option to cancel the trade.<br />2. Fix: Display error messages at the start of the trade.<br />3. Fix: Ad edit screen displays a formula instead of market price.
           </div>
         
 
@@ -1216,7 +1216,7 @@
         
           <div class="app-changelog">
               <div class="cat-headline">Changelog</div>
-              1. Fixed: Issue affecting the visibility of the transaction details screen.<br />2. Fixed: Incorrect initial time limit setting in an advertisement.
+              1. Fix: Some trades have no option to cancel the trade.<br />2. Fix: Display error messages at the start of the trade.<br />3. Fix: Ad edit screen displays a formula instead of market price.
           </div>
         
 
@@ -1309,7 +1309,7 @@
         
           <div class="app-changelog">
               <div class="cat-headline">Changelog</div>
-              1. Fixed: Issue affecting the visibility of the transaction details screen.<br />2. Fixed: Incorrect initial time limit setting in an advertisement.
+              1. Fix: Some trades have no option to cancel the trade.<br />2. Fix: Display error messages at the start of the trade.<br />3. Fix: Ad edit screen displays a formula instead of market price.
           </div>
         
 
@@ -1402,7 +1402,7 @@
         
           <div class="app-changelog">
               <div class="cat-headline">Changelog</div>
-              1. Fixed: Issue affecting the visibility of the transaction details screen.<br />2. Fixed: Incorrect initial time limit setting in an advertisement.
+              1. Fix: Some trades have no option to cancel the trade.<br />2. Fix: Display error messages at the start of the trade.<br />3. Fix: Ad edit screen displays a formula instead of market price.
           </div>
         
 
@@ -1495,7 +1495,7 @@
         
           <div class="app-changelog">
               <div class="cat-headline">Changelog</div>
-              1. Fixed: Issue affecting the visibility of the transaction details screen.<br />2. Fixed: Incorrect initial time limit setting in an advertisement.
+              1. Fix: Some trades have no option to cancel the trade.<br />2. Fix: Display error messages at the start of the trade.<br />3. Fix: Ad edit screen displays a formula instead of market price.
           </div>
         
 
@@ -1588,7 +1588,7 @@
         
           <div class="app-changelog">
               <div class="cat-headline">Changelog</div>
-              1. Fixed: Issue affecting the visibility of the transaction details screen.<br />2. Fixed: Incorrect initial time limit setting in an advertisement.
+              1. Fix: Some trades have no option to cancel the trade.<br />2. Fix: Display error messages at the start of the trade.<br />3. Fix: Ad edit screen displays a formula instead of market price.
           </div>
         
 
@@ -1681,7 +1681,7 @@
         
           <div class="app-changelog">
               <div class="cat-headline">Changelog</div>
-              1. Fixed: Issue affecting the visibility of the transaction details screen.<br />2. Fixed: Incorrect initial time limit setting in an advertisement.
+              1. Fix: Some trades have no option to cancel the trade.<br />2. Fix: Display error messages at the start of the trade.<br />3. Fix: Ad edit screen displays a formula instead of market price.
           </div>
         
 
@@ -1774,7 +1774,7 @@
         
           <div class="app-changelog">
               <div class="cat-headline">Changelog</div>
-              1. Fixed: Issue affecting the visibility of the transaction details screen.<br />2. Fixed: Incorrect initial time limit setting in an advertisement.
+              1. Fix: Some trades have no option to cancel the trade.<br />2. Fix: Display error messages at the start of the trade.<br />3. Fix: Ad edit screen displays a formula instead of market price.
           </div>
         
 
@@ -1857,7 +1857,7 @@
         
           <div class="app-changelog">
               <div class="cat-headline">Changelog</div>
-              1. Fixed: Issue affecting the visibility of the transaction details screen.<br />2. Fixed: Incorrect initial time limit setting in an advertisement.
+              1. Fix: Some trades have no option to cancel the trade.<br />2. Fix: Display error messages at the start of the trade.<br />3. Fix: Ad edit screen displays a formula instead of market price.
           </div>
         
 
@@ -1940,7 +1940,7 @@
         
           <div class="app-changelog">
               <div class="cat-headline">Changelog</div>
-              1. Fixed: Issue affecting the visibility of the transaction details screen.<br />2. Fixed: Incorrect initial time limit setting in an advertisement.
+              1. Fix: Some trades have no option to cancel the trade.<br />2. Fix: Display error messages at the start of the trade.<br />3. Fix: Ad edit screen displays a formula instead of market price.
           </div>
         
 
