@@ -1,2 +1,3 @@
-1. Fixed: Issue affecting the visibility of the transaction details screen.
-2. Fixed: Incorrect initial time limit setting in an advertisement.
+1. Fix: Some trades have no option to cancel the trade.
+2. Fix: Display error messages at the start of the trade.
+3. Fix: Ad edit screen displays a formula instead of market price.
